--- a/K53_Sign_Test/road_sign_test3.html
+++ b/K53_Sign_Test/road_sign_test3.html
@@ -3154,6 +3154,75 @@ function downloadMotor(buttonId) {
 }
 
 </script>
+<script>
+const nicheAdvices = [
+"Compare Discovery car insurance and Santam premiums online to secure affordable coverage, fast claims, and peace of mind while protecting your vehicle. 🚗🛡️💸",
+"Apply for a personal loan with FNB or Standard Bank after comparing interest rates and fees to choose the best repayment plan. 🏦💰📄",
+"Choose medical aid from Discovery or Momentum for comprehensive hospital coverage, chronic care, and wellness benefits to protect your family long term. 🏥💊👨‍👩‍👧‍👦",
+"Compare life insurance options at Old Mutual and Hollard to ensure income replacement, dependents’ financial security, and reliable claim payouts. ❤️🛡️📄",
+"Use CMH or Imperial dealership platforms to compare vehicle prices, warranties, and finance packages for safer car purchases. 🚘💻📊",
+"Select the right credit card from Absa or Capitec by reviewing rewards, annual fees, and interest rates for maximum benefits. 💳🏦💡",
+"Review OUTsurance short-term policies yearly to ensure your car and home assets remain fully covered while premiums stay competitive. 🏡🚗🛡️",
+"Compare home loan offers from Nedbank and Standard Bank to reduce fees, lower interest rates, and secure manageable repayments. 🏠🏦📈",
+"Choose comprehensive Santam car insurance for accidents, theft, hail, and third-party protection to preserve vehicle value. 🚗🛡️⚡",
+"Use Discovery medical aid comparison tools to evaluate hospital networks, benefits, and affordability for optimal family healthcare coverage. 🏥💊📊",
+"Apply for vehicle finance pre-approval with FNB or Absa to negotiate better prices and ensure budget-friendly deals. 🚘💳🏦",
+"Use Hollard life insurance calculators to determine appropriate coverage for dependents, debts, and long-term family protection. ❤️📄🏡",
+"Transfer balances to Capitec or Standard Bank credit cards to reduce interest on high debt and improve financial health. 💳💸🏦",
+"Compare insurance excess amounts at Santam and OUTsurance to balance affordable premiums with manageable claim costs. 🛡️💰📄",
+"Check Imperial or McCarthy dealership-approved used cars for verified history, warranties, and finance options before purchasing. 🚘📊🛠️",
+"Choose fixed-rate personal loans from Nedbank or FNB for repayment certainty and protection against interest fluctuations. 💰📈🏦",
+"Compare comprehensive vs. third-party car insurance at Discovery or Santam to select protection based on vehicle value and risk. 🚗🛡️⚖️",
+"Select medical aid gap cover from Momentum or Discovery to prevent hospital shortfalls and safeguard savings. 🏥💊💰",
+"Use FNB online loan calculators to understand repayment amounts, interest, and affordability before applying. 💻🏦📄",
+"Select premium credit cards from Absa or Standard Bank to access travel insurance, rewards, and purchase protection. 💳✈️🏦",
+"Check insurer claim settlement ratios at Discovery and Hollard for fast, reliable, and transparent payouts. 🛡️📄✅",
+"Choose Imperial or CMH dealership-backed vehicle warranties to cover unexpected repairs after purchase. 🚘🛠️💰",
+"Compare vehicle finance rates from FNB and Standard Bank to reduce total repayment costs and improve affordability. 🏦🚘📈",
+"Select life cover from Old Mutual or Hollard to maintain family financial stability after income loss. ❤️🏡📄",
+"Check medical aid waiting periods at Discovery or Momentum to avoid early exclusions during policy use. 🏥🕒💊",
+"Apply for secured loans at Capitec or Nedbank to obtain lower interest rates than unsecured options. 💰🏦📈",
+"Compare dealership trade-in offers at CMH or McCarthy for fair vehicle valuation before upgrading. 🚘📊💸",
+"Review credit card repayment structures from Absa or Capitec to prevent interest accumulation and maintain credit health. 💳📄💡",
+"Choose insurers offering roadside assistance such as Santam or OUTsurance for safety and convenience on South African roads. 🚗🛠️🛡️",
+"Use bond originators to compare multiple Nedbank and FNB mortgage offers without submitting separate applications. 🏠🏦📄",
+"Select medical aid plans with chronic benefits from Discovery or Momentum to protect long-term family healthcare. 🏥💊💰",
+"Compare car insurance add-ons at Hollard or Santam to choose extras without unnecessary premiums. 🚗🛡️💵",
+"Choose reputable dealerships like Imperial or CMH to reduce risks of hidden defects and poor service. 🚘🛠️✅",
+"Check early settlement penalties on loans from FNB or Nedbank to maintain repayment flexibility. 💰📄🏦",
+"Select credit cards with cashback rewards from Capitec or Standard Bank for everyday spending benefits. 💳💸🛍️",
+"Review life insurance beneficiaries at Old Mutual or Hollard to ensure payouts reach dependents efficiently. ❤️📄🏡",
+"Compare insurance renewal rates at Santam and OUTsurance to avoid overpaying for coverage. 🛡️💰📊",
+"Apply for pre-owned vehicle finance with Imperial or CMH, comparing rates, mileage limits, and warranties. 🚘🏦📄",
+"Use medical aid comparison services at Discovery or Momentum to select the best plan efficiently. 🏥💻💊",
+"Consolidate personal loans with Capitec or FNB to simplify repayments and reduce interest costs. 💰📄📊",
+"Select insurers regulated by SA authorities like Discovery or Hollard for consumer protection and claim reliability. 🛡️🏦✅",
+"Compare dealership vs. bank financing with CMH or FNB for best vehicle interest rates. 🚘🏦📈",
+"Choose credit cards with fraud protection from Absa or Capitec to secure transactions. 💳🔒📄",
+"Review life insurance premium structures at Old Mutual or Hollard for long-term affordability. ❤️📄💰",
+"Compare health insurance hospital networks at Discovery or Momentum to access preferred facilities. 🏥🏨💊",
+"Use dealership service plans at Imperial or CMH to reduce long-term vehicle maintenance costs. 🚘🛠️💵",
+"Compare bank loan approval times from Nedbank or FNB to meet urgent financing needs efficiently. 🏦⏱️💰",
+"Select comprehensive insurance from Santam or OUTsurance to protect assets against unexpected financial loss. 🛡️🏡🚗",
+"Choose reputable banks like Standard Bank or Capitec for transparent lending and compliance. 🏦✅📄",
+"Evaluate car insurance claim processes at Discovery or Hollard for fast, reliable payouts. 🚗🛡️📄",
+"Compare credit card reward programs at Absa or Capitec to maximize everyday spending benefits. 💳💰🎁",
+"Apply for life insurance early at Old Mutual or Hollard for better premiums and protection. ❤️📄⏳",
+"Use online dealership reviews for CMH or Imperial to select trusted car sellers. 🚘💻✅",
+"Compare personal loan rates from FNB or Nedbank to reduce total costs and improve affordability. 💰📈🏦",
+"Select medical aid with wellness benefits from Discovery or Momentum to support preventative healthcare. 🏥💊💡",
+"Compare car insurance no-claims discounts at Santam or OUTsurance to maximize savings. 🚗💰🛡️",
+"Choose credit cards with travel insurance from Absa or Standard Bank to cover trip disruptions. 💳✈️🛡️",
+"Review insurer customer support ratings at Discovery or Hollard to select reliable providers. 🛡️📄☎️",
+"Pre-approve car finance at Imperial or CMH to negotiate better vehicle prices at dealerships. 🚘🏦💸",
+"Compare life insurance riders at Old Mutual or Hollard to enhance coverage for illness or disability. ❤️🛡️📄"
+];
+
+document.querySelectorAll(".niches").forEach(el => {
+  const randomAdvice = nicheAdvices[Math.floor(Math.random() * nicheAdvices.length)];
+  el.textContent = randomAdvice;
+});
+</script>
 
 
 
