--- a/K53_Sign_Test/road_sign_test1.html
+++ b/K53_Sign_Test/road_sign_test1.html
@@ -188,7 +188,7 @@
     <h3>Question 3 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -270,7 +270,7 @@
     <h3>Question 4 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+  <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -352,7 +352,7 @@
     <h3>Question 5 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -473,7 +473,7 @@
     <h3>Question 6 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+  <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -555,7 +555,7 @@
     <h3>Question 7 of   30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -637,7 +637,7 @@
     <h3>Question 8 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -719,7 +719,7 @@
     <h3>Question 9 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+ <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -801,7 +801,7 @@
     <h3>Question 10 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -852,7 +852,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+ <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -921,7 +921,7 @@
     <h3>Question 11 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+ <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1003,7 +1003,7 @@
     <h3>Question 12 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+  <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1085,7 +1085,7 @@
     <h3>Question 13 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+  <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1167,7 +1167,7 @@
     <h3>Question 14 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1249,7 +1249,7 @@
     <h3>Question 15 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1395,7 +1395,7 @@
     <h3>Question 16 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -1487,7 +1487,7 @@
     <h3>Question 17 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1569,7 +1569,7 @@
     <h3>Question 18 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+  <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1651,7 +1651,7 @@
     <h3>Question 19 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+  <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1733,7 +1733,7 @@
     <h3>Question 20 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+ <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1784,7 +1784,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+  <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1851,7 +1851,7 @@
     <h3>Question 21 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1933,7 +1933,7 @@
     <h3>Question 22 of   30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2015,7 +2015,7 @@
     <h3>Question 23 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+  <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2097,7 +2097,7 @@
     <h3>Question 24 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2179,7 +2179,7 @@
     <h3>Question 25 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2299,7 +2299,7 @@
     <h3>Question 26 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+  <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2381,7 +2381,7 @@
     <h3>Question 27 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2463,7 +2463,7 @@
     <h3>Question 28 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2545,7 +2545,7 @@
     <h3>Question 29 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2596,7 +2596,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+ <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2664,7 +2664,7 @@
     <h3>Question 30 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3214,6 +3214,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
