--- a/K53_Sign_Test/road_sign_test4.html
+++ b/K53_Sign_Test/road_sign_test4.html
@@ -188,7 +188,7 @@
     <h3>Question 3 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -270,7 +270,7 @@
     <h3>Question 4 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -352,7 +352,7 @@
     <h3>Question 5 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -474,7 +474,7 @@
     <h3>Question 6 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -556,7 +556,7 @@
     <h3>Question 7 of   30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -638,7 +638,7 @@
     <h3>Question 8 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -720,7 +720,7 @@
     <h3>Question 9 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -802,7 +802,7 @@
     <h3>Question 10 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -853,7 +853,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -921,7 +921,7 @@
     <h3>Question 11 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1003,7 +1003,7 @@
     <h3>Question 12 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1085,7 +1085,7 @@
     <h3>Question 13 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1167,7 +1167,7 @@
     <h3>Question 14 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1249,7 +1249,7 @@
     <h3>Question 15 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1396,7 +1396,7 @@
     <h3>Question 16 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -1488,7 +1488,7 @@
     <h3>Question 17 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1570,7 +1570,7 @@
     <h3>Question 18 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1652,7 +1652,7 @@
     <h3>Question 19 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1734,7 +1734,7 @@
     <h3>Question 20 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1785,7 +1785,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1853,7 +1853,7 @@
     <h3>Question 21 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1935,7 +1935,7 @@
     <h3>Question 22 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2017,7 +2017,7 @@
     <h3>Question 23 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2099,7 +2099,7 @@
     <h3>Question 24 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2181,7 +2181,7 @@
     <h3>Question 25 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2305,7 +2305,7 @@
     <h3>Question 26 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2387,7 +2387,7 @@
     <h3>Question 27 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2469,7 +2469,7 @@
     <h3>Question 28 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2551,7 +2551,7 @@
     <h3>Question 29 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2602,7 +2602,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2671,7 +2671,7 @@
     <h3>Question 30 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3222,6 +3222,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
