--- a/K53_Rules_Test/road_rules_test1.html
+++ b/K53_Rules_Test/road_rules_test1.html
@@ -176,7 +176,7 @@
     <h3>Question 3 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -253,7 +253,7 @@
     <h3>Question 4 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -330,7 +330,7 @@
     <h3>Question 5 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -449,7 +449,7 @@
     <h3>Question 6 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -526,7 +526,7 @@
     <h3>Question 7 of   30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -603,7 +603,7 @@
     <h3>Question 8 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -680,7 +680,7 @@
     <h3>Question 9 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -757,7 +757,7 @@
     <h3>Question 10 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -803,7 +803,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -870,7 +870,7 @@
     <h3>Question 11 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -947,7 +947,7 @@
     <h3>Question 12 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1023,7 +1023,7 @@
     <h3>Question 13 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1100,7 +1100,7 @@
     <h3>Question 14 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1177,7 +1177,7 @@
     <h3>Question 15 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1319,7 +1319,7 @@
     <h3>Question 16 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -1405,7 +1405,7 @@
     <h3>Question 17 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1481,7 +1481,7 @@
     <h3>Question 18 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1558,7 +1558,7 @@
     <h3>Question 19 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1634,7 +1634,7 @@
     <h3>Question 20 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1680,7 +1680,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1749,7 +1749,7 @@
     <h3>Question 21 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1826,7 +1826,7 @@
     <h3>Question 22 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1903,7 +1903,7 @@
     <h3>Question 23 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1979,7 +1979,7 @@
     <h3>Question 24 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2055,7 +2055,7 @@
     <h3>Question 25 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2174,7 +2174,7 @@
     <h3>Question 26 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2251,7 +2251,7 @@
     <h3>Question 27 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2328,7 +2328,7 @@
     <h3>Question 28 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2405,7 +2405,7 @@
     <h3>Question 29 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2451,7 +2451,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2520,7 +2520,7 @@
     <h3>Question 30 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3062,6 +3062,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
