--- a/K53_Rules_Test/road_rules_test1.html
+++ b/K53_Rules_Test/road_rules_test1.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -101,7 +101,7 @@
     <h3>Question 2 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -374,7 +374,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1221,7 +1221,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2100,7 +2100,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3062,6 +3062,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
