--- a/K53_Rules_Test/road_rules_test6.html
+++ b/K53_Rules_Test/road_rules_test6.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -101,7 +101,7 @@
     <h3>Question 2 of 30</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -176,7 +176,7 @@
     <h3>Question 3 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -253,7 +253,7 @@
     <h3>Question 4 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -330,7 +330,7 @@
     <h3>Question 5 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -374,7 +374,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -449,7 +449,7 @@
     <h3>Question 6 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -526,7 +526,7 @@
     <h3>Question 7 of   30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -603,7 +603,7 @@
     <h3>Question 8 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -680,7 +680,7 @@
     <h3>Question 9 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -757,7 +757,7 @@
     <h3>Question 10 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -804,7 +804,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -871,7 +871,7 @@
     <h3>Question 11 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -948,7 +948,7 @@
     <h3>Question 12 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1024,7 +1024,7 @@
     <h3>Question 13 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1101,7 +1101,7 @@
     <h3>Question 14 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1178,7 +1178,7 @@
     <h3>Question 15 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1222,7 +1222,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1320,7 +1320,7 @@
     <h3>Question 16 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
     <div class="container">
       <div id="branding2">
         <h1><a ><span id="time"></span></a></h1>
@@ -1406,7 +1406,7 @@
     <h3>Question 17 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1482,7 +1482,7 @@
     <h3>Question 18 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1559,7 +1559,7 @@
     <h3>Question 19 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1635,7 +1635,7 @@
     <h3>Question 20 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1681,7 +1681,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1750,7 +1750,7 @@
     <h3>Question 21 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1827,7 +1827,7 @@
     <h3>Question 22 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1904,7 +1904,7 @@
     <h3>Question 23 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1980,7 +1980,7 @@
     <h3>Question 24 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2056,7 +2056,7 @@
     <h3>Question 25 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2101,7 +2101,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2176,7 +2176,7 @@
     <h3>Question 26 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2253,7 +2253,7 @@
     <h3>Question 27 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2330,7 +2330,7 @@
     <h3>Question 28 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2407,7 +2407,7 @@
     <h3>Question 29 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2484,7 +2484,7 @@
     <h3>Question 30 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2529,7 +2529,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3069,5 +3069,6 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
